<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <ImageView
            android:id="@+id/imageFinish"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:contentDescription="@string/missing_img"
            app:srcCompat="@drawable/ic_baseline_clear_24" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:id="@+id/upper"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/app_name"
                    android:textSize="24sp"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/imageView28"
                    android:src="@drawable/main_icon"
                    android:layout_margin="10dp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageViewLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/horizontal_line" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="@string/app_info_text_line1"
                    android:textSize="12sp"
                    android:layout_marginTop="4dp"
                    android:padding="4dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="@string/app_info_text_line2"
                    android:textSize="12sp"
                    android:padding="4dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="@string/app_info_text_line3"
                    android:textSize="12sp"
                    android:padding="4dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/text_version_name"
                    android:layout_marginTop="10dp"
                    android:textColor="#455a64"
                    android:textStyle="italic|bold"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/app_info_rights_reserved"
                    android:layout_marginTop="15dp"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    android:textColor="#616161" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>